// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileScreen renders another user's profile 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 1,
        }
      }
    >
      <Image
        PlaceholderContent={
          <ActivityIndicator
            animating={true}
            color="#999999"
            hidesWhenStopped={true}
            size="small"
          />
        }
        source={
          Object {
            "uri": "https://cdn.pixabay.com/photo/2018/08/31/18/21/fantasy-3645269_960_720.jpg",
          }
        }
        style={
          Object {
            "height": 200,
            "width": "100%",
          }
        }
      />
      <Avatar
        containerStyle={
          Object {
            "backgroundColor": "red",
            "borderColor": "#fff",
            "borderWidth": 2,
            "left": 5,
            "position": "absolute",
            "top": 130,
          }
        }
        rounded={true}
        size={120}
        source={
          Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "flex-end",
            "flexDirection": "row",
            "marginRight": 10,
            "marginTop": 10,
          }
        }
      >
        <RoundButton
          icon={
            Object {
              "color": "#1da1f2",
              "name": "mail-outline",
            }
          }
          type="outline"
        />
        <RoundButton
          icon={
            Object {
              "color": "#1da1f2",
              "name": "add-alert",
            }
          }
          type="outline"
        />
        <RoundButton
          title="Following"
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          h3={true}
        >
          Jane Doe
        </Text>
        <Text
          style={
            Object {
              "color": "#5c5c5c",
              "fontSize": 20,
            }
          }
        >
          @JaneDoe
        </Text>
        <Text
          style={
            Object {
              "fontSize": 20,
              "marginTop": 5,
            }
          }
        >
          Sample description
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginEnd": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontWeight": "bold",
                  "marginEnd": 5,
                }
              }
            >
              6
            </Text>
            <Text>
              Following
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "fontWeight": "bold",
                  "marginEnd": 5,
                }
              }
            >
              3
            </Text>
            <Text>
              Followers
            </Text>
          </View>
        </View>
      </View>
      <TabViewComponent
        routes={
          Array [
            Object {
              "component": Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "displayName": "Connect(TweetList)",
                "type": [Function],
              },
              "title": "Tweets",
            },
            Object {
              "component": [Function],
              "title": "Tweets & replies",
            },
            Object {
              "component": [Function],
              "title": "Media",
            },
            Object {
              "component": [Function],
              "title": "Likes",
            },
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;

exports[`ProfileScreen renders current user's profile 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Object {
          "alignItems": "stretch",
          "flex": 1,
        }
      }
    >
      <Image
        PlaceholderContent={
          <ActivityIndicator
            animating={true}
            color="#999999"
            hidesWhenStopped={true}
            size="small"
          />
        }
        source={
          Object {
            "uri": "https://cdn.pixabay.com/photo/2018/08/31/18/21/fantasy-3645269_960_720.jpg",
          }
        }
        style={
          Object {
            "height": 200,
            "width": "100%",
          }
        }
      />
      <Avatar
        containerStyle={
          Object {
            "backgroundColor": "red",
            "borderColor": "#fff",
            "borderWidth": 2,
            "left": 5,
            "position": "absolute",
            "top": 130,
          }
        }
        rounded={true}
        size={120}
        source={
          Object {
            "uri": "https://s3.amazonaws.com/uifaces/faces/twitter/ladylexy/128.jpg",
          }
        }
      />
      <View
        style={
          Object {
            "alignItems": "center",
            "alignSelf": "flex-end",
            "flexDirection": "row",
            "marginRight": 10,
            "marginTop": 10,
          }
        }
      >
        <RoundButton
          title="Edit profile"
          type="outline"
        />
      </View>
      <View
        style={
          Object {
            "paddingHorizontal": 10,
          }
        }
      >
        <Text
          h3={true}
        >
          Jane Doe
        </Text>
        <Text
          style={
            Object {
              "color": "#5c5c5c",
              "fontSize": 20,
            }
          }
        >
          @JaneDoe
        </Text>
        <Text
          style={
            Object {
              "fontSize": 20,
              "marginTop": 5,
            }
          }
        >
          Sample description
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginEnd": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontWeight": "bold",
                  "marginEnd": 5,
                }
              }
            >
              6
            </Text>
            <Text>
              Following
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                Object {
                  "fontWeight": "bold",
                  "marginEnd": 5,
                }
              }
            >
              3
            </Text>
            <Text>
              Followers
            </Text>
          </View>
        </View>
      </View>
      <TabViewComponent
        routes={
          Array [
            Object {
              "component": Object {
                "$$typeof": Symbol(react.memo),
                "WrappedComponent": [Function],
                "compare": null,
                "displayName": "Connect(TweetList)",
                "type": [Function],
              },
              "title": "Tweets",
            },
            Object {
              "component": [Function],
              "title": "Tweets & replies",
            },
            Object {
              "component": [Function],
              "title": "Media",
            },
            Object {
              "component": [Function],
              "title": "Likes",
            },
          ]
        }
      />
    </View>
  </View>
</RCTScrollView>
`;
